--- a/_site.yml
+++ b/_site.yml
@@ -15,7 +15,7 @@ navbar:
           href: NHANES1.html
         - text: "Away-From-Home Meals and BMI"
           href: NHANES2.html
-    - text: "Data - Analysis - R"
+    - text: "Data Analysis - R"
       menu:
         - text: "Analyzing Likert Scale of Depressive Symptoms"
           href: ordinalmodel.html
